Remove redundant legacy Java workarounds (#1361)
Some classes use workarounds for issues present in older JDKs that
Hazelcast no longer supports, and can be removed.

Issues:
- [JDK bug](https://bugs.openjdk.java.net/browse/JDK-8156584), fixed in
9
   - `TestJavaKeyStoreSecureStoreUtils`
- [JDK bug](https://bugs.java.com/bugdatabase/view_bug?bug_id=8234729),
fixed in [15 (see blocking
issues)](https://bugs.openjdk.org/browse/JDK-8171335) + only skips on 15
& 16 (nothing else) anyway
   - `DebeziumCdcIntegrationTest.java`
   - `AbstractMySqlCdcIntegrationTest.java`
   - `MySqlCdcNetworkIntegrationTest.java`
- JDK8 compiler issue (unknown root cause) - compiles properly now
   - `GrAggBuilder`
   - `GeneralHashJoinBuilder`
GitOrigin-RevId: 75141818062b1e790a201a597c760f634e1d2d4b